test_regress/t/t_randomize_method_types_unsup.out
%Error-UNSUPPORTED: t/t_randomize_method_types_unsup.v:12:13: Unsupported: random member variables with type ASSOCARRAYDTYPE
                                                            : ... In instance t
   12 |    rand int assocarr[string];
      |             ^~~~~~~~
%Error-UNSUPPORTED: t/t_randomize_method_types_unsup.v:13:13: Unsupported: random member variables with type DYNARRAYDTYPE
                                                            : ... In instance t
   13 |    rand int dynarr[];
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_randomize_method_types_unsup.v:14:13: Unsupported: random member variables with type UNPACKARRAYDTYPE
                                                            : ... In instance t
   14 |    rand int unpackarr[5];
      |             ^~~~~~~~~
%Error-UNSUPPORTED: t/t_randomize_method_types_unsup.v:15:15: Unsupported: random member variables with type UNIONDTYPE
                                                            : ... In instance t
   15 |    rand Union uni;
      |               ^~~
%Error: Exiting due to
